# EmbeddedSystem_PeopleCountingSystem

./: README.md
OLED_Displaying/: OLED.py  OLED_temp.py
OLED_Displaying/templates/: index.html
People_Counting/: YoloFastestV2.depend  YoloFastestV2.layout  mainFV2.cpp  yolo-fastestv2.cpp
People_Counting_cpp/: CMakeLists.txt
People_Counting_cpp/src/: main.cpp  yolo-fastestv2.cpp
